--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: My Terraform Deployment
 
 # Controls when the workflow will run
 on:
@@ -38,4 +38,7 @@ jobs:
           
       - name: Test Terraform
         run: terraform init
+        
+      - name: Like Terraform
+        run: terraform version
  
